@@ -2,4 +2,5 @@ bin
 db
 dbd
 lib
+include
 O.*
