@@ -26,6 +26,12 @@ DBD = ether_ip.dbd
 
 LIBRARY_IOC = ether_ip
 
+INC += R314Compat.h
+INC += eip_bool.h
+INC += dl_list.h
+INC += ether_ip.h
+INC += drvEtherIP.h
+
 # create munch file for dynamic loading will install in <bin>
 PROD_IOC_vxWorks += ether_ipLib
 
