@@ -6,35 +6,35 @@ include $(TOP)/configure/CONFIG
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 
 # <name>.dbd will be created from <name>Include.dbd
-DBD += example.dbd
+DBD += eipIoc.dbd
 
 #=============================
 
-PROD_IOC = example
+FINAL_LOCATION = $(shell $(PERL) $(TOOLS)/fullPathName.pl $(INSTALL_LOCATION))
+EIP_DBD = $(FINAL_LOCATION)/dbd/eipIoc.dbd
+USR_CPPFLAGS += -DEIP_DBD=\"$(EIP_DBD)\"
+
+PROD_IOC = eipIoc
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
-example_SRCS += example_registerRecordDeviceDriver.cpp
-example_SRCS_DEFAULT += exampleMain.cpp
-example_SRCS_vxWorks += -nil-
+eipIoc_SRCS += eipIoc_registerRecordDeviceDriver.cpp
+eipIoc_SRCS_DEFAULT += eipIocMain.cpp
+eipIoc_SRCS_vxWorks += -nil-
 
 #The following adds support from base/src/vxWorks
-example_OBJS_vxWorks += $(EPICS_BASE_BIN)/vxComLibrary
+eipIoc_OBJS_vxWorks += $(EPICS_BASE_BIN)/vxComLibrary
 
 # Use win32 object libs for registered support
-example_LIBS_win32 += recIocObj
-example_LIBS_win32 += softDevIocObj
-example_LIBS_win32 += testDevIocObj
-example_LIBS_DEFAULT += recIoc
-example_LIBS_DEFAULT += softDevIoc
-example_LIBS_DEFAULT += testDevIoc
+eipIoc_LIBS_win32 += recIocObj
+eipIoc_LIBS_win32 += softDevIocObj
+eipIoc_LIBS_win32 += testDevIocObj
+eipIoc_LIBS_DEFAULT += recIoc
+eipIoc_LIBS_DEFAULT += softDevIoc
+eipIoc_LIBS_DEFAULT += testDevIoc
 
-example_LIBS += ether_ip
+eipIoc_LIBS += ether_ip
 ether_ip_DIR = $(INSTALL_LIB)
 
-example_LIBS += $(EPICS_BASE_IOC_LIBS)
-
-#===========================
+eipIoc_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 include $(TOP)/configure/RULES
-#----------------------------------------
-#  ADD RULES AFTER THIS LINE
